--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-cloud_events-*.tar
+cloudevents-*.tar
 
 # VSCode Elixir extension
 /.elixir_ls/
